--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
     <div class="header">
       <h1> Password Generator JS </h1> 
     </div>
+   
     <div class="generator">
+        <div class="guide">
+            <ol>
+                <li>Select the number of letters, numbers and symbols</li>
+                <li>Press Generate</li>
+                <li>Copy your password using the copy button or generate a new one</li>
+            </ol>
+        </div>
         <span id="totalChars"></span>
         <textarea name="textarea" id="pwText" class="generator_text"></textarea>
-        <span class="generator_numbers">Number of chars: <span id="charNumber"></span></span>
-        <input type="range" id="chars" class="generator_field slider" min="6" max="16" value="6">  
+        <span class="generator_numbers">Number of letters: <span id="charNumber"></span></span>
+        <input type="range" id="chars" class="generator_field slider" min="4" max="16" value="4">  
         <span  class="generator_numbers">Number of symbols: <span id="charSymbol"></span></span>
         <input type="range" id="symbols"  class="generator_field" min="2" max="16" value="2">
         <span  class="generator_numbers">How many numbers: <span id="numberCount"></span> </span>
         <input type="range" id="numbers"  class="generator_field" min="2" max="16" value="2">
+        <div class="buttons">
         <button class="gen_btn" id="generate" class="generator_button">Generate</button>
+        <button id="copy" onclick="copyPW()">Copy password</button>
+         </div>
       
     </div>
 </body>
