--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             </ol>
         </div>
         <span id="totalChars"></span>
-        <textarea name="textarea" id="pwText" class="generator_text"></textarea>
+        <input name="textarea" id="pwText" class="generator_text"></input>
         <span class="generator_numbers">Number of letters: <span id="charNumber"></span></span>
         <input type="range" id="chars" class="generator_field slider" min="4" max="16" value="4">  
         <span  class="generator_numbers">Number of symbols: <span id="charSymbol"></span></span>
-        <input type="range" id="symbols"  class="generator_field" min="2" max="16" value="2">
+        <input type="range" id="symbols"  class="generator_field slider" min="2" max="16" value="2">
         <span  class="generator_numbers">How many numbers: <span id="numberCount"></span> </span>
-        <input type="range" id="numbers"  class="generator_field" min="2" max="16" value="2">
+        <input type="range" id="numbers"  class="generator_field slider" min="2" max="16" value="2">
         <div class="buttons">
-        <button class="gen_btn" id="generate" class="generator_button">Generate</button>
-        <button id="copy" onclick="copyPW()">Copy password</button>
+        <button class="buttons_btn" id="generate" class="generator_button">Generate</button>
+        <button id="copy"  class="buttons_btn" onclick="copyPW()">Copy password</button>
          </div>
       
     </div>
